hermes_fuzz_executed/fuzz_57_execution
'use strict';
const a = {
    foo;
};
a.toString();


Execution Output ------------------:
test.js:3:8: error: ':' expected in property initialization
    foo;
    ~~~^
